# shark-clipper

./: .gitignore  README.md  ffmpeg.py  handlers.py  main.py  pyproject.toml  requirements-dev.txt  run.sh  server.py  util.py
.github/workflows/: artifacts.yml  main.yml
scripts/: fetch-ffmpeg.py  run-server.sh
sharkclipper/api/: handlers.py  server.py
sharkclipper/cli/: server.py
sharkclipper/util/: ffmpeg.py  file.py  log.py  net.py  version.py
static/: index.html
static/css/: style.css
static/js/: html.js  main.js  media.js  resize.js  util.js
